k8s/frontend-depoyement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app 
spec:
  replicas: 1
  selector:
    labels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: chat-app
      labels:
        app: frontend
    spec:
      containers:
      - name: chat-app-frontend
        image: yash2463/chatapp-frontend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
